--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Shaokai Lin (林少凯)"
+title                    : "Shaokai Lin 林少凯"
 title_separator          : "-"
-name                     : &name "Shaokai Lin"
+name                     : &name "Shaokai (Jerry) Lin"
 description              : &description "an aspiring academic"
 url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Shaokai Lin"
+  name             : "Shaokai (Jerry) Lin"
   avatar           : "profile.png"
-  bio              : "Research assistant at Columbia University"
+  bio              : "Research Assistant at Columbia University"
   location         : "New York, NY 10027"
   employer         :
   pubmed           : 
@@ -103,7 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
