--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Shaokai Lin 林少凯"
 title_separator          : "-"
 name                     : &name "Shaokai (Jerry) Lin"
 description              : &description "an aspiring academic"
-url                      : http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://lsk567.github.io # http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lsk567/lsk567.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
