--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,12 @@ title                    : "Shaokai Lin 林少凯"
 title_separator          : "-"
 name                     : &name "Shaokai (Jerry) Lin"
 description              : &description "an aspiring academic"
-url                      : https://lsk567.github.io # http://localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://lsk567.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+#url                      : http://localhost:4000
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lsk567/lsk567.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
-breadcrumbs              : false # true, false (default)
+breadcrumbs              : true # true, false (default)
 words_per_minute         : 160
 future                   : true
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
@@ -81,13 +82,13 @@ analytics:
 # Site Author
 author:
   name             : "Shaokai (Jerry) Lin"
-  avatar           : "profile.png"
+  avatar           : "Jerry_square.jpeg"
   bio              : "Research Assistant at Columbia University"
   location         : "New York, NY 10027"
   employer         :
   pubmed           : 
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  googlescholar    : "https://scholar.google.com/citations?user=0IfrIpQAAAAJ&hl=en"
+  email            : shaokai.lin@columbia.edu
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
