--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,17 +3,17 @@ main:
   - title: "Papers"
     url: /papers/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+    #- title: "Portfolio"
+    #url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /blog/
+    #- title: "Blog Posts"
+    #url: /blog/
     
   - title: "CV"
     url: /files/Shaokai_Lin_CV.pdf
 
-  - title: "Fun"
-    url: /fun/
+    #- title: "Fun"
+    #url: /fun/
     
     #- title: "Guide"
     #url: /markdown/
