--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Papers"
     url: /papers/    
     
-    #- title: "Portfolio"
-    #url: /portfolio/
+  - title: "Portfolio"
+    url: /portfolio/
         
     #- title: "Blog Posts"
     #url: /blog/
