--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -11,7 +11,7 @@ title                    : "Shaokai Lin 林少凯"
 title_separator          : "-"
 name                     : &name "Shaokai (Jerry) Lin"
 description              : &description "an aspiring academic"
-url                      : http://localhost:4000
+url                      : https://lsk567.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lsk567/lsk567.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -80,14 +80,14 @@ analytics:
 
 # Site Author
 author:
-  name             : "Shaokai (Jerry) Lin"
-  avatar           : "Jerry_square.jpeg"
-  bio              : "Research Assistant at Columbia University"
-  location         : "New York, NY 10027"
+  name             : "Shaokai Lin"
+  avatar           : "Shaokai_square.jpeg"
+  bio              : "EECS PhD Student  at UC Berkeley"
+  location         : "Berkeley, CA 94720"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=0IfrIpQAAAAJ&hl=en"
-  email            : shaokai.lin@columbia.edu
+  email            : shaokai@berkeley.edu
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
