--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Shaokai Lin 林少凯"
 title_separator          : "-"
-name                     : &name "Shaokai (Jerry) Lin"
+name                     : &name "Shaokai Lin"
 description              : &description "an aspiring academic"
 url                      : https://lsk567.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -80,14 +80,14 @@ analytics:
 
 # Site Author
 author:
-  name             : "Shaokai (Jerry) Lin"
+  name             : "Shaokai Lin"
   avatar           : "Jerry_square.jpeg"
-  bio              : "Research Assistant at Columbia University"
-  location         : "New York, NY 10027"
+  bio              : "EECS PhD Student at University of California, Berkeley"
+  location         : "Berkeley, CA 94720"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=0IfrIpQAAAAJ&hl=en"
-  email            : shaokai.lin@columbia.edu
+  googlescholar    : "https://scholar.google.com/citations?user=g0eTMuIAAAAJ&hl=en"
+  email            : shaokai at berkeley dot edu
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
