--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Shaokai Lin"
-  avatar           : "Jerry_square.jpeg"
+  avatar           : "Shaokai_square.jpeg"
   bio              : "EECS PhD Student at University of California, Berkeley"
   location         : "Berkeley, CA 94720"
   employer         :
